--- a/roles/home.verdaccio/meta/argument_specs.yml
+++ b/roles/home.verdaccio/meta/argument_specs.yml
@@ -2,15 +2,15 @@
 argument_specs:
   main:
     options:
-      config_dir:
+      verdaccio_config_dir:
         type: "str"
         description: "The path to the config directory"
         required: true
-      storage_dir:
+      verdaccio_storage_dir:
         type: "str"
         description: "The path to the storage directory"
         required: true
-      plugins_dir:
+      verdaccio_plugins_dir:
         type: "str"
         description: "The path to the plugins directory"
         required: true
