--- a/main.yml
+++ b/main.yml
@@ -1,143 +1,6 @@
-# ------------------------------------
-# room_of_requirement
-# ------------------------------------
-- name: Install packages onto NAS
-  hosts: room_of_requirement
-  become: true
-  tasks:
-    - ansible.builtin.pip:
-        name: docker
-    - ansible.builtin.pip:
-        name: docker-compose
-    - ansible.builtin.pip:
-        name: passlib
-
-- name: Configure NAS Docker Services
-  hosts: room_of_requirement
-  roles:
-    - home.prometheus-docker-node-exporter
-
-    - role: home.verdaccio
-      config_dir: /volume1/Docker/verdaccio/config
-      storage_dir: /volume1/Docker/verdaccio/storage
-      plugins_dir: /volume1/Docker/verdaccio/plugins
-      verdaccio_user: pbabbott
-      verdaccio_pw: "{{ verdaccio.pbabbott_password }}"
-  
-
-# ------------------------------------
-# localhost
-# ------------------------------------
-
-- name: Configure Local Computer
-  hosts: localhost
-  roles:
-    - role: home.detect_shell
-    - role: home.shell_config
-      config_file_name: "{{ shell_interactive }}"
-      aliases:
-        - alias: ll
-          command: ls -lh
-        - alias: k
-          command: kubectl
-        - alias: python
-          command: python3
-      exports: 
-        - key: PATH
-          value: "$PATH:$HOME/.local/bin"
-        - key: VERDACCIO_TOKEN
-          value: "{{ verdaccio.pbabbott_token }}"
-      ssh_targets:
-        - shortcut: rpi
-          username: "{{ hostvars.rpi.ansible_user }}"
-          hostname: "{{ hostvars.rpi.ansible_host }}"
-        - shortcut: ror
-          username: "{{ hostvars.room_of_requirement.ansible_user }}"
-          hostname: "{{ hostvars.room_of_requirement.ansible_host }}"
-    - role: home.ssh_readiness
-
-# ------------------------------------
-# rpi
-# ------------------------------------
-- name: Install python, docker, azure cli, and pip packages on RPI host (executes as root)
-  hosts: rpi
-  become: true
-  pre_tasks:
-    - name: Update Apt
-      ansible.builtin.apt:
-        upgrade: yes
-        update_cache: yes
-    - name: Install Python3 pip
-      ansible.builtin.apt:
-        name: 
-          - python3-pip
-        update_cache: yes
-  roles:
-    - role: home.docker_metrics
-      ip_address: "{{ ansible_host }}"
-    - role: home.docker
-    - role: home.docker_permissions
-    - role: home.az.cli
-    - role: cloudalchemy.node_exporter
-  tasks:
-    - ansible.builtin.pip:
-        name: docker
-    - ansible.builtin.pip:
-        name: docker-compose
-    - ansible.builtin.pip:
-        name: azure-cli
-
-- name: Docker Installations on RPI (not root)
-  hosts: rpi
-  pre_tasks:
-    - name: Create a network
-      community.docker.docker_network:
-        name: lsio
-  roles:
-    - role: home.mealie
-    - role: home.duckdns
-    - role: home.swag
-    - role: home.prometheus-server
-    - role: home.drone-server
-    - role: home.grafana
-    - role: home.home-assistant
-    
-    - role: home.zip.backup
-      path: /home/pi/homeassistant_data
-      dest: "/home/pi/homeassistant_data_{{ansible_date_time.date}}.tar.gz"
-      username: "{{ azure.homeSPN.username }}"
-      password: "{{ azure.homeSPN.password }}"
-      tenant: "{{ azure.homeSPN.tenant }}"
-      subscriptionId: "07619e8e-01a2-4b48-9d9c-281f290d3a37"
-      job_name: homeassistant_data
-
-    - role: home.zip.backup
-      path: /home/pi/mealie_data
-      dest: "/home/pi/mealie_data_{{ansible_date_time.date}}.tar.gz"
-      username: "{{ azure.homeSPN.username }}"
-      password: "{{ azure.homeSPN.password }}"
-      tenant: "{{ azure.homeSPN.tenant }}"
-      subscriptionId: "07619e8e-01a2-4b48-9d9c-281f290d3a37"
-      job_name: mealie_data
-  
-    - role: home.zip.backup
-      path: /home/pi/grafana
-      dest: "/home/pi/grafana_data_{{ansible_date_time.date}}.tar.gz"
-      username: "{{ azure.homeSPN.username }}"
-      password: "{{ azure.homeSPN.password }}"
-      tenant: "{{ azure.homeSPN.tenant }}"
-      subscriptionId: "07619e8e-01a2-4b48-9d9c-281f290d3a37"
-      job_name: grafana_data
-
-    - role: home.drone-server
-      path: /home/pi/drone_data
-      dest: "/home/pi/drone_data_{{ansible_date_time.date}}.tar.gz"
-      username: "{{ azure.homeSPN.username }}"
-      password: "{{ azure.homeSPN.password }}"
-      tenant: "{{ azure.homeSPN.tenant }}"
-      subscriptionId: "07619e8e-01a2-4b48-9d9c-281f290d3a37"
-      job_name: drone_data
-
-#------------------------------------
+      
+- import_playbook: ./playbooks/room_of_requirement.yml
+- import_playbook: ./playbooks/localhost.yml
+- import_playbook: ./playbooks/rpi.yml
 
 
