--- a/playbooks/localhost.yml
+++ b/playbooks/localhost.yml
@@ -1,6 +1,7 @@
 - name: Configure Local Computer
   hosts: localhost
   roles:
+    - role: home.pip
     - role: home.detect_shell
     - role: home.shell_config
       config_file_name: "{{ shell_interactive }}"
