Successful connection to elder_wand

--- a/inventory.yml
+++ b/inventory.yml
@@ -15,7 +15,7 @@ all:
           ansible_connection: winrm
           ansible_winrm_scheme: http
           ansible_winrm_server_cert_validation: ignore
-          ansible_winrm_transport: basic
+          ansible_winrm_transport: ntlm
           ansible_user: pbabb
           ansible_password: "{{ inventoryPasswords.elder_wand }}"
         rpi:
