--- a/roles/home.drone-server/tasks/main.yml
+++ b/roles/home.drone-server/tasks/main.yml
@@ -17,7 +17,7 @@
           container_name: drone
           image: drone/drone:2
           environment:
-            DRONE_GITHUB_CLIENT_ID: "{{ drone.client_id }}"
+            DRONE_GITHUB_CLIENT_ID: "{{ drone.github_client_id }}"
             DRONE_GITHUB_CLIENT_SECRET: "{{ drone.github_client_secret }}"
             DRONE_RPC_SECRET: "{{ drone.shared_secret }}"
             DRONE_SERVER_HOST: drone.abbottland.duckdns.org
