Move drone-docker-runner onto port 3000, ensure connectivity to docker.sock

--- a/playbooks/rpi.yml
+++ b/playbooks/rpi.yml
@@ -35,8 +35,10 @@
     - role: home.swag
     - role: home.prometheus-server
     - role: home.drone-server
+    - role: home.drone-docker-runner
     - role: home.grafana
     - role: home.home-assistant
+    
 
 - name: Backup important data to Azure each week
   hosts: rpi
