--- a/roles/home.drone-docker-runner/tasks/main.yml
+++ b/roles/home.drone-docker-runner/tasks/main.yml
@@ -20,4 +20,6 @@
             DRONE_RUNNER_NAME: rpi-runner
           restart: always
           ports:
-            - 3001:3000
+            - 3000:3000
+          volumes:
+            - /var/run/docker.sock:/var/run/docker.sock
