--- a/roles/home.grafana/tasks/main.yml
+++ b/roles/home.grafana/tasks/main.yml
@@ -25,7 +25,7 @@
           container_name: grafana
           restart: always
           ports:
-            - "3000:3000"
+            - "3002:3000"
           user: "1001"
           volumes:
             - /home/pi/grafana/data:/var/lib/grafana
@@ -41,4 +41,4 @@
   docker_container:
     name: grafana
     restart: true
-  # when: grafana_conf.changed
+  when: grafana_conf.changed
