--- a/roles/home.verdaccio/tasks/main.yml
+++ b/roles/home.verdaccio/tasks/main.yml
@@ -25,14 +25,15 @@
     src: ./files/config.yaml
     dest: "{{ verdaccio_config_dir }}/config.yaml"
 
-- name: Add a user to a password file and ensure permissions are set
-  community.general.htpasswd:
-    path: "{{ verdaccio_config_dir }}/htpasswd"
-    name: "{{ verdaccio_user }}"
-    password: "{{ verdaccio_pw }}"
-    owner: 10001
-    group: 65533
-    mode: 0644
+# TODO: figure out how to add a user after the service is up with npm adduser
+# - name: Add a user to a password file and ensure permissions are set
+#   community.general.htpasswd:
+#     path: "{{ verdaccio_config_dir }}/htpasswd"
+#     name: "{{ verdaccio_user }}"
+#     password: "{{ verdaccio_pw }}"
+#     owner: 10001
+#     group: 65533
+#     mode: 0644
 
 - name: restart verdaccio container
   docker_container:
