--- a/playbooks/elder_wand.yml
+++ b/playbooks/elder_wand.yml
@@ -2,4 +2,21 @@
   hosts: elder_wand
   tasks:
     - name: Ping host
-      win_ping:
+      win_ping: {}
+      
+    - name: Install node-windows
+      ansible.builtin.win_shell: npm install -g node-windows
+      args:
+        creates: C:\Users\pbabb\AppData\Roaming\npm\node_modules\node-windows
+
+    - name: Copy a single file
+      win_copy:
+        src: ../files/.npmrc
+        dest: C:\Users\pbabb\.npmrc
+
+    - name: Set an environment variable for machine
+      win_environment:
+        state: present
+        name: NPM_TOKEN
+        value: "{{ verdaccio.pbabbott_token }}"
+        level: machine
