--- a/roles/home.dashy/tasks/main.yml
+++ b/roles/home.dashy/tasks/main.yml
@@ -1,7 +1,14 @@
 - ansible.builtin.file:
-    path: /home/pi/dashy_data
+    path: /home/pi/dashy
     state: directory
     mode: '0755'  
+
+- name: Copy configuration file to remote
+  register: dashy_conf
+  ansible.builtin.copy:
+    src: ./files/conf.yml
+    dest: /home/pi/dashy/conf.yml
+
 - community.docker.docker_compose:
     project_name: dashy
     
@@ -14,18 +21,17 @@
       services:
         dashy:
           container_name: dashy
-          image: lissy93/dashy  
+          image: lissy93/dashy
           restart: always
           ports:
             - 4000:80
           environment:
-            # TODO: Move these into group vars
             PUID: 1001
             PGID: 1001
             NODE_ENV: production
 
           volumes:
-            - /home/pi/mealie_data/:/app/data
+            - /home/pi/dashy/conf.yml:/app/public/conf.yml
 
           healthcheck:
             test: ['CMD', 'node', '/app/services/healthcheck']
@@ -33,3 +39,9 @@
             timeout: 10s
             retries: 3
             start_period: 40s
+
+- name: Restart dashy container
+  docker_container:
+    name: dashy
+    restart: true
+  when: dashy_conf.changed
