--- a/playbooks/rpi.yml
+++ b/playbooks/rpi.yml
@@ -31,6 +31,7 @@
         name: lsio
   roles:
     - role: home.dashy
+    - role: home.portainer
     # - role: home.mealie
     # - role: home.duckdns
     # - role: home.swag
